# BIBRA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  cypress.config.js  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cypress.yml  tests.yml
bibra/: __init__.py  main.py
bibra/api/v0/: routes.py
bibra/backend/: __init__.py  config.py  dummy.py  greylitlm.py
bibra/static/: index.html
bibra/static/css/: styles.css
bibra/static/js/: bibra.js  index.js
bibra/types/: __init__.py
cypress/e2e/: api-routes.cy.js  home-page.cy.js
cypress/support/: commands.js  e2e.js
tests/: conftest.py  test_api_routes.py  test_integration.py  test_main.py  test_schemathesis.py  test_version.py
