[project]
name = "bibra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "pydantic-ai-slim[openai]>=1.73.0",
    "python-multipart>=0.0.22",
    "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
    "pre-commit>=4.5.1",
    "schemathesis>=4.13.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
